--- a/files/styles/style.css
+++ b/files/styles/style.css
@@ -1,12 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@600&display=swap');
-*{
-
-    /*
-    
-    */
-    
-}
 *:any-link{
     color: var(--color);
     text-decoration: none;
@@ -18,6 +11,13 @@ body{
     color: var(--color);
     user-select: none;
 }
+::-moz-selection { /* Code for Firefox */
+    background: var(--selection);
+  }
+  
+  ::selection {
+    background: var(--selection);
+  }
 #background{
     position: fixed;
     top: 0px;
