--- a/src/style.css
+++ b/src/style.css
@@ -1,8 +1,8 @@
 *{
     --white-text: #DDD;
     --gray-text: #AAA;
-    --accent: #e23535;
-    --accent-lighter: #ec5757;
+    --accent-darker: #e23535;
+    --accent: #ec5757;
     --background: #151515;
     --background-dark: #121212;
 }
@@ -10,6 +10,7 @@ body{
     background-color: var(--background-dark);
     font-family: roboto;
     margin: 0;
+    margin-bottom: 50px;
     padding-top: calc(45px + 20px);
     color: var(--white-text);
 }
@@ -20,7 +21,7 @@ body{
     padding-top: 20px;
     top: 0px;
     left: 0px;
-    background-color: var(--background-dark);
+    background-color: var(--background);
     display: flex;
     justify-content: flex-end;
     align-items: center;
@@ -40,7 +41,7 @@ body{
     width: 100px;
     color: var(--white-text);
     text-decoration: none;
-    border-left: 1px solid var(--accent-lighter);
+    border-left: 1px solid var(--accent);
     padding-left: 5px;
     letter-spacing: 1px;
     flex-shrink: 1;
@@ -88,17 +89,17 @@ body{
     letter-spacing: 3px;
 }
 #landing-name span{
-    color: var(--accent);
+    color: var(--accent-darker);
 }
 #landing-left hr{
-    border-color: var(--accent);
+    border-color: var(--accent-darker);
     width: 120px;
     border-style: solid;
     border-width: 2px;
     margin: 15px 0px 10px 15px;
 }
 #landing-contacts{
-    color: var(--accent-lighter);
+    color: var(--accent);
     display: flex;
     flex-wrap: wrap;
     gap: 5px;
@@ -112,12 +113,12 @@ body{
     -o-transition: color 0.1s ease;
 }
 #landing-contacts :any-link:hover{
-    color: var(--accent-lighter);
+    color: var(--accent);
 }
 
 #landing-more-contacts{
-    border: 3px solid var(--accent);
-    color: var(--accent-lighter);
+    border: 3px solid var(--accent-darker);
+    color: var(--accent);
     width: 120px;
     height: 40px;
     margin-top: 15px;
@@ -144,7 +145,7 @@ body{
     padding-right: 100px;
 }
 #landing-introduction{
-    color: var(--accent);
+    color: var(--accent-darker);
     letter-spacing: 2px;
     font-variant: small-caps;
     font-size: 18px;
@@ -155,7 +156,7 @@ body{
     margin-bottom: 5px;
 }
 #landing-paragraph-title span{
-    color: var(--accent-lighter);
+    color: var(--accent);
     font-weight: 100;
 }
 #landing-paragraph{
@@ -176,11 +177,11 @@ body{
     -o-transition: color 0.1s ease;
 }
 #landing-paragraph a:hover{
-    color: var(--accent-lighter);
+    color: var(--accent);
 }
 #landing-learn-more{
-    border: 3px solid var(--accent);
-    color: var(--accent-lighter);
+    border: 3px solid var(--accent-darker);
+    color: var(--accent);
     width: 120px;
     height: 40px;
     margin-left: 15px;
@@ -198,9 +199,47 @@ body{
     position: absolute;
     bottom: 15px;
     right: 30px;
-    color: var(--accent-lighter);
+    color: var(--accent);
     text-decoration: none;
 }
 #landing-scroller:hover{
     text-decoration: underline;
+}
+
+#cards-page{
+    min-height: calc(100vh - 45px - 20px);
+    max-width: 100vw;
+    overflow: hidden;
+}
+.cards-title{
+    font-size: 20px;
+    margin-top: 35px;
+    margin-bottom: 5px;
+    color: var(--accent-darker);
+    letter-spacing: 2px;
+    font-variant: small-caps;
+    text-align: center;
+    letter-spacing: 3px;
+}
+.card-collection-description{
+    color: var(--gray-text);
+    text-align: center;
+    margin-bottom: 10px;
+}
+.cards-collection{
+    display: flex;
+    justify-content: center;
+    gap: 15px;
+    max-width: 100%;
+    flex-wrap: wrap;
+    padding: 0px 20px;
+}
+.card{
+    height: 250px;
+    width: auto;
+    min-width: 160px;
+    max-width: 200px;
+    flex-grow: 1;
+    flex-shrink: 1;
+    background-color: var(--background);
 }
