--- a/src/style.css
+++ b/src/style.css
@@ -5,6 +5,7 @@
     --accent: #ec5757;
     --background: #151515;
     --background-dark: #121212;
+
 }
 body{
     background-color: var(--background-dark);
@@ -14,10 +15,13 @@ body{
     padding-top: calc(45px + 20px);
     color: var(--white-text);
     overflow-x: hidden;
+    max-width: 100vw;
+    scroll-behavior: smooth;
 }
 #nav-bar{
     position: fixed;
     width: 100%;
+    max-width: 100vw;
     height: 45px;
     padding-top: 20px;
     top: 0px;
@@ -200,7 +204,6 @@ body{
 }
 
 #cards-page{
-    min-height: calc(100vh - 45px - 20px);
     max-width: 100vw;
     overflow: hidden;
     padding-bottom: 50px;
@@ -210,7 +213,6 @@ body{
     margin-top: 35px;
     margin-bottom: 5px;
     color: var(--accent-darker);
-    letter-spacing: 2px;
     font-variant: small-caps;
     text-align: center;
     letter-spacing: 3px;
@@ -218,7 +220,8 @@ body{
 .card-collection-description{
     color: var(--gray-text);
     text-align: center;
-    margin-bottom: 10px;
+    margin: 10px;
+    margin-top: 0px;
 }
 .cards-collection{
     display: flex;
@@ -272,13 +275,13 @@ body{
 
 #latest-works{
     background-color: var(--background);
-    padding: 35px 20px 60px 20px;
+    padding: 35px 20px 45px 20px;
+    max-width: 100vw;
 }
 #latest-works-title{
     font-size: 20px;
     margin-bottom: 5px;
     color: var(--accent-darker);
-    letter-spacing: 2px;
     font-variant: small-caps;
     text-align: center;
     letter-spacing: 3px;
@@ -293,6 +296,8 @@ body{
     grid-template-rows: repeat(3, 150px);
     grid-template-columns: repeat(3, 350px);
     justify-content: center;
+    width: auto;
+    max-width: calc(100vw - 20px);
 }
 .work-large {
     grid-row: 1 / 4;
@@ -306,11 +311,11 @@ body{
 .work-image{
     filter: grayscale(0.8);
     -webkit-filter: grayscale(0.8);
-    transition: 0.2s ease-in-out;
-    -webkit-transition: 0.2s ease-in-out;
-    -moz-transition: 0.2s ease-in-out;
-    -ms-transition: 0.2s ease-in-out;
-    -o-transition: 0.2s ease-in-out;
+    transition: 0.2s filter ease-in-out;
+    -webkit-transition: 0.2s filter ease-in-out;
+    -moz-transition: 0.2s filter ease-in-out;
+    -ms-transition: 0.2s filter ease-in-out;
+    -o-transition: 0.2s filter ease-in-out;
 }
 .work-image:hover{
     filter: grayscale(0.3);
@@ -354,6 +359,7 @@ body{
     text-align: left;
     padding: 7px;
     line-height: 14px;
+    overflow-y: auto;
 }
 .work-description a img{
     width: 12px;
@@ -374,4 +380,98 @@ body{
 }
 .work-description a:any-link:hover{
     color: var(--accent);
+}
+
+#contacts-page{
+    padding: 10px;
+}
+#contacts-title{
+    font-size: 20px;
+    margin-bottom: 5px;
+    color: var(--accent-darker);
+    font-variant: small-caps;
+    text-align: center;
+    letter-spacing: 3px;
+}
+#contacts-description{
+    color: var(--gray-text);
+    text-align: center;
+    margin-bottom: 20px;
+}
+#contacts-collection{
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 10px;
+    padding: 0px 250px;
+}
+.contact{
+    background-color: var(--background);
+    width: 180px;
+    height: 20px;
+    padding: 10px;
+    display: flex;
+    align-items: center;
+    transition: color 0.1s ease-in-out;
+    -webkit-transition: color 0.1s ease-in-out;
+    -moz-transition: color 0.1s ease-in-out;
+    -ms-transition: color 0.1s ease-in-out;
+    -o-transition: color 0.1s ease-in-out;
+}
+.contact:any-link{
+    text-decoration: none;
+    color: var(--white-text)
+}
+.contact:hover{
+    color: var(--accent);
+}
+.contact span{
+    color: var(--accent-darker);
+    font-size: 40px;
+    transform: translate(-2px, -11px);
+    -webkit-transform: translate(-2px, -11px);
+    -moz-transform: translate(-2px, -11px);
+    -ms-transform: translate(-2px, -11px);
+    -o-transform: translate(-2px, -11px);
+    user-select: none;
+}
+.contact img{
+    margin-left: auto;
+    transform: scale(0.65);
+    -webkit-transform: scale(0.65);
+    -moz-transform: scale(0.65);
+    -ms-transform: scale(0.65);
+    -o-transform: scale(0.65);
+}
+
+
+
+
+
+@media (max-width: 1050px), (orientation: portrait) {
+    #latest-works-collection{
+        grid-template-columns: 1fr;
+        grid-template-rows: repeat(5, 150px);
+    }
+    .work-small, .work-large{
+        margin: 5px 0px;
+    }
+    .work-large{
+        grid-row: auto;
+    }
+    .work-large{
+        display: grid;
+        grid-template-rows: auto 1fr;
+        grid-template-columns: 150px 1fr;
+    }
+    .work-large .work-image{
+        grid-row: 1 / 3;
+        grid-column: 1 / 2;
+        overflow: hidden;
+    }
+    .work-large img{
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
 }
