--- a/src/style.css
+++ b/src/style.css
@@ -5,6 +5,8 @@
     --accent: #ec5757;
     --background: #151515;
     --background-dark: #121212;
+}
+html{
     scroll-behavior: smooth;
 }
 *::selection {
@@ -40,7 +42,7 @@ body{
     display: flex;
     justify-content: flex-end;
     align-items: center;
-    z-index: 1;
+    z-index: 5;
     font-size: 20px;
     border-bottom: #111 solid 1px;
 }
@@ -48,7 +50,9 @@ body{
     margin-right: auto;
     border: none;
     padding-left: 20px;
-    width: 30px;
+}
+#home-nav{
+    width: 32px;
 }
 .nav-item{
     width: 120px;
@@ -70,6 +74,9 @@ body{
     background: radial-gradient(circle, var(--background-dark) 40vh, var(--background) 40px);
     position: relative;
 }
+#landing-mobile{
+    display: none;
+}
 #cut-out{
     position: absolute;
     bottom: 0px;
@@ -84,13 +91,10 @@ body{
 #landing-left{
     position: absolute;
     top: -50px;
-    left: 100px;
+    left: 10%;
     height: 100%;
     font-size: 15px;
     padding-top: 150px;
-}
-#landing-left div{
-    max-width: 50%;
 }
 #landing-name{
     font-size: 38px;
@@ -119,6 +123,7 @@ body{
     -moz-transform: translate(-3px);
     -ms-transform: translate(-3px);
     -o-transform: translate(-3px);
+    max-width: 50%;
 }
 #landing-contacts :any-link{
     color: var(--gray-text);
@@ -156,7 +161,7 @@ body{
 #landing-right{
     position: absolute;
     top: -70px;
-    left: calc(50% + 200px);
+    left: 65%;
     height: 100%;
     padding-top: 150px;
     max-width: 360px;
@@ -217,6 +222,7 @@ body{
     right: 30px;
     color: var(--accent);
     text-decoration: none;
+    cursor: pointer;
 }
 #landing-scroller:hover{
     text-decoration: underline;
@@ -238,46 +244,45 @@ body{
 .card-collection-description{
     color: var(--gray-text);
     text-align: center;
-    margin: 10px;
+    margin: 20px;
     margin-top: 0px;
 }
 .cards-collection{
     display: flex;
     justify-content: center;
-    gap: 15px;
+    gap: 25px;
     max-width: 100%;
     flex-wrap: wrap;
     padding: 0px 20px;
 }
 .card{
-    height: 230px;
-    width: auto;
-    min-width: 150px;
-    max-width: 230px;
+    height: 220px;
+    width: min-content;
+    min-width: 100px;
+    max-width: 160px;
     padding: 10px;
     flex-grow: 1;
     flex-shrink: 1;
     background-color: var(--background);
 }
 .card-image{
-    height: 100px;
-    width: 100px;
-    margin: 20px auto 10px auto;
+    height: 70px;
+    width: 70px;
+    margin: 25px auto;
     display: block;
 }
 .card-title{
-    font-size: 18px;
     color: var(--accent-darker);
-    margin-bottom: 5px;
+    font-weight: 600;
+    font-size: 14px;
     text-align: center;
+    letter-spacing: 1px;
+    margin-bottom: 10px;
 }
 .card-description{
-    font-size: 12px;
+    font-size: 11px;
     color: var(--gray-text);
     text-align: center;
-    /* i could eliminate the use of <br> breaks
-    by limiting the max-width to 90% or something    
-    */
 }
 .card-description a:any-link{
     color: var(--gray-text);
@@ -306,12 +311,12 @@ body{
 #latest-projects-description{
     color: var(--gray-text);
     text-align: center;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
 }
 #latest-projects-collection{
     display: grid;
-    grid-template-rows: repeat(3, 150px);
-    grid-template-columns: repeat(3, 350px);
+    grid-template-rows: repeat(3, 140px);
+    grid-template-columns: 280px 280px 330px;
     justify-content: center;
     width: auto;
     max-width: calc(100vw - 20px);
@@ -321,13 +326,13 @@ body{
 }
 .project-large, .project-small{
     background: var(--background-dark);
-    margin: 0px 20px 15px 0px;
+    margin: 0px 30px 15px 0px;
     overflow: hidden;
     position: relative;
 }
 .project-image{
-    filter: grayscale(0.7);
-    -webkit-filter: grayscale(0.7);
+    filter: grayscale(0.8);
+    -webkit-filter: grayscale(0.8);
     transition: 0.2s filter ease-in-out;
     -webkit-transition: 0.2s filter ease-in-out;
     -moz-transition: 0.2s filter ease-in-out;
@@ -363,17 +368,19 @@ body{
     left: 0px;
     padding: 5px 10px;
     font-size: 13px;
+    letter-spacing: 1px;
 }
 .project-title{
     font-size: 15px;
     color: var(--accent-darker);
     text-align: center;
     padding-top: 15px;
+    letter-spacing: 1px;
 }
 .project-description{
     font-size: 12px;
     color: var(--gray-text);
-    text-align: left;
+    text-align: justify;
     padding: 7px;
     line-height: 14px;
     overflow-y: auto;
@@ -481,7 +488,7 @@ body{
 }
 
 
-@media (max-width: 1050px), (orientation: portrait) {
+@media (max-width: 1000px) {
     #latest-projects-collection{
         grid-template-columns: 1fr;
         grid-template-rows: repeat(5, 150px);
@@ -507,4 +514,132 @@ body{
         height: 100%;
         object-fit: cover;
     }
+}
+
+@media (orientation: portrait){
+    body{
+        padding-top: 150px;
+    }
+    #nav-bar{
+        height: 140px;
+        padding-top: 0px;
+        border-bottom-width: 10px;
+    }
+    .nav-item{
+        display: none;
+    }
+    #home-nav{
+        display: block;
+        padding-left: 50px;
+    }
+    #home-nav img{
+        width: 80px;
+    }
+    #landing{
+        height: calc(100vh - 150px);
+        background: radial-gradient(circle, var(--background-dark) 30vh, var(--background) 30px);
+    }
+    #landing-left, #landing-right{
+        display: none;
+    }
+    #cut-out{
+        left: calc(50% - 60vh / 2);
+        height: 60vh;
+    }
+    #landing-mobile{
+        display: block;
+        padding: 50px;
+        position: relative;
+        top: 30px;
+        z-index: 1;
+    }
+    #landing-name{
+        font-size: 90px;
+        line-height: 80px;
+    }
+    #landing-name span{
+        font-size: 120px;
+    }
+    #landing-mobile hr{
+        border: solid 5px var(--accent-darker);
+        width: 200px;
+        margin: 35px 0px 20px 45px;
+    }
+    #landing-paragraph{
+        font-size: 55px;
+        line-height: 55px;
+        padding-right: 110px;
+        text-shadow: #000 5px 5px 8px;
+    }
+    #landing-paragraph span{
+        color: var(--accent);
+    }
+    #landing-paragraph a:any-link{
+        font-size: 55px;
+        line-height: 60px;
+        font-variant: normal;
+        color: var(--gray-text);
+    }
+    #landing-scroller{
+        font-size: 60px;
+        right: 55px;
+        bottom: 40px;
+    }
+    .cards-title{
+        font-size: 50px;
+    }
+    .card-collection-description{
+        font-size: 38px;
+    }
+    .cards-collection{
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: auto;
+        padding: 0px 50px;
+    }
+    .card{
+        width: auto;
+        max-width: none;
+        height: 430px;
+        padding: 20px;
+    }
+    .card-image{
+        width: 160px;
+        height: 160px;
+        margin-bottom: 40px;
+    }
+    .card-title{
+        font-size: 35px;
+    }
+    .card-description{
+        font-size: 28px;
+    }
+    #latest-projects-collection{
+        grid-template-columns: 1fr;
+        grid-template-rows: repeat(5, 400px);
+    }
+    .project-small, .project-large{
+        margin: 15px 0px;
+    }
+    .project-small, .project-large{
+        grid-column: auto;
+        grid-row: auto;
+    }
+    .project-large, .project-small{
+        display: grid;
+        grid-template-rows: auto 1fr;
+        grid-template-columns: 400px 1fr;
+    }
+    .project-image{
+        grid-row: 1 / 3;
+        grid-column: 1 / 2;
+        filter: grayscale(0.3);
+        -webkit-filter: grayscale(0.3);
+}
+    .project-large img, .project-small img{
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        -webkit-filter: none;
+}
 }
